WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23142
ThreadGlobalData leaks seen on buildbot
https://bugs.webkit.org/show_bug.cgi?id=23142
Summary
ThreadGlobalData leaks seen on buildbot
Alexey Proskuryakov
Reported
2009-01-06 12:16:57 PST
Looks like the per-thread value isn't available from within destructor on Mac OS X, even though we don't clear it yet.
Attachments
proposed fix
(1.51 KB, patch)
2009-01-06 12:33 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-01-06 12:33:23 PST
Created
attachment 26467
[details]
proposed fix
Darin Adler
Comment 2
2009-01-06 16:05:47 PST
Comment on
attachment 26467
[details]
proposed fix
> + * wtf/ThreadSpecific.h: (WTF::::destroy): Temporarily reset the thread specific value > + to make getter work on Mac OS X.
WTF::::destroy is not the name of the function. prepare-ChangeLog failed and needs human assistance. r=me
Alexey Proskuryakov
Comment 3
2009-01-06 23:24:37 PST
Committed revision 39672.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug