        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=23142
        ThreadGlobalData leaks seen on buildbot

        * wtf/ThreadSpecific.h: (WTF::ThreadSpecific::destroy): Temporarily reset the thread
        specific value to make getter work on Mac OS X.

        * wtf/Platform.h: Touch this file again to make sure all Windows builds use the most recent
        version of ThreadSpecific.h.



Canonical link: https://commits.webkit.org/31871@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39672 268f45cc-cd09-0410-ab3c-d52691b4dbfc